Makefile fixed and check argument corrected

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,53 +6,81 @@
 #    By: avolcy <avolcy@student.42barcelon>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/26 19:48:00 by avolcy            #+#    #+#              #
-#    Updated: 2023/12/27 20:37:30 by avolcy           ###   ########.fr        #
+#    Updated: 2023/12/31 17:15:35 by avolcy           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CC = cc
-EXEC = philo
-NAME = philo.a
+NAME = philo
+RM = rm -rf
 HEADER = philo.h
-BUILT_LIB = ar rc
 FLAG = -Wall -Wextra -Werror
 
 #========|_PATH_|=========#
 INC = ./inc/$(HEADER)
-SRCD = srcs/
-OBJD = .temp/
-#_________________________#
 
-SRC = $(SRCD)philo.c $(SRCD)utils.c
+SRCDIR = ./srcs/
+OBJDIR = ./obj/
 
-OBJ = $(addprefix $(OBJD), $(SRC:$(SRCD)%.c=%.o))
+SRC = $(SRCDIR)philo.c $(SRCDIR)utils.c
+OBJ = $(addprefix $(OBJDIR), $(SRC:$(SRCDIR)%.c=%.o))
 
 #=========|_TARGETS_|=======#
 
-all : $(EXEC)
+all : $(NAME)
 
-.temp :
-	@mkdir -p .temp
-#__________________________#
+$(OBJDIR)%.o: $(SRCDIR)%.c $(INC) | $(OBJDIR)
+	@$(CC) $(FLAG) -c $< -o $@
 
-$(OBJD)%.o: $(SRCD)%.c $(INC) | .temp
-	@$(CC) $(FLAG) -c -o $@ $<
+$(OBJDIR):
+	@mkdir -p $(OBJDIR)
 
-
-$(EXEC) : $(NAME) $(INC) 
-	$(CC) $(FLAG) $^ -o $@
-	
-$(NAME) : $(OBJD) $(INC) Makefile
-	@$(BUILT_LIB) $@ $^
+$(NAME) : $(OBJ) $(INC)
+	$(CC) $(FLAG) $(OBJ) -o $@ 
 
 .PHONY: all clean fclean re
 
 #=========|_CLEAN_UP_|========#
 clean :
-	@$(RM) $(OBJD)
+	@$(RM) $(OBJDIR)
 
 fclean : clean
-	@$(RM) $(EXEC) $(NAME)
+	@$(RM) $(NAME)
 
 re : fclean all
-#_______________________________________#
+
+#CC = cc
+#NAME = philo
+#RM = rm -rf
+#HEADER = philo.h
+#FLAG = -Wall -Wextra -Werror
+#
+##========|_PATH_|=========#
+#INC = ./inc/$(HEADER)
+#
+#SRC = philo.c utils.c
+#
+#OBJ = $(SRC:.c=.o)
+#
+##=========|_TARGETS_|=======#
+#
+#all : $(NAME)
+#
+#
+#%.o: %.c $(INC) 
+#	@$(CC) $(FLAG) -c $< -o $@ 
+#
+#$(NAME) : $(OBJ) $(INC) 
+#	$(CC) $(FLAG) -o $@ $^
+#
+#.PHONY: all clean fclean re
+#
+##=========|_CLEAN_UP_|========#
+#clean :
+#	@$(RM) $(OBJ) 
+#
+#fclean : clean
+#	@$(RM) $(NAME) 
+#
+#re : fclean all
+##_______________________________________#
