--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: avolcy <avolcy@student.42barcelon>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/26 19:48:00 by avolcy            #+#    #+#              #
-#    Updated: 2023/12/31 17:15:35 by avolcy           ###   ########.fr        #
+#    Updated: 2024/01/06 23:14:33 by avolcy           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,7 +22,7 @@ INC = ./inc/$(HEADER)
 SRCDIR = ./srcs/
 OBJDIR = ./obj/
 
-SRC = $(SRCDIR)philo.c $(SRCDIR)utils.c
+SRC = $(SRCDIR)philo.c $(SRCDIR)utils.c $(SRCDIR)init.c
 OBJ = $(addprefix $(OBJDIR), $(SRC:$(SRCDIR)%.c=%.o))
 
 #=========|_TARGETS_|=======#
@@ -48,39 +48,3 @@ fclean : clean
 	@$(RM) $(NAME)
 
 re : fclean all
-
-#CC = cc
-#NAME = philo
-#RM = rm -rf
-#HEADER = philo.h
-#FLAG = -Wall -Wextra -Werror
-#
-##========|_PATH_|=========#
-#INC = ./inc/$(HEADER)
-#
-#SRC = philo.c utils.c
-#
-#OBJ = $(SRC:.c=.o)
-#
-##=========|_TARGETS_|=======#
-#
-#all : $(NAME)
-#
-#
-#%.o: %.c $(INC) 
-#	@$(CC) $(FLAG) -c $< -o $@ 
-#
-#$(NAME) : $(OBJ) $(INC) 
-#	$(CC) $(FLAG) -o $@ $^
-#
-#.PHONY: all clean fclean re
-#
-##=========|_CLEAN_UP_|========#
-#clean :
-#	@$(RM) $(OBJ) 
-#
-#fclean : clean
-#	@$(RM) $(NAME) 
-#
-#re : fclean all
-##_______________________________________#
