last changes on makefile

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: avolcy <avolcy@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/26 19:48:00 by avolcy            #+#    #+#              #
-#    Updated: 2024/02/16 21:26:10 by avolcy           ###   ########.fr        #
+#    Updated: 2024/02/17 22:45:59 by avolcy           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,7 +16,7 @@ RM = rm -rf
 HEADER = philo.h
 HEADER1 = struct.h
 HEADER2 = macros.h
-FLAG = -Wall -Wextra -Werror -fsanitize=thread
+FLAG = -Wall -Wextra -Werror
 
 #========|_PATH_|=========#
 INC = ./inc/$(HEADER)
@@ -45,17 +45,18 @@ $(NAME) : $(OBJ) $(INC) Makefile
 	@$(CC) $(FLAG) $(OBJ) -o $@
 	@$(call display_compiling)
 	@printf "\033[1;32mphilo compiled successfuly ! ✅\n\033[m"
+	@sleep 2
 
 .PHONY: all clean fclean re
 
 #====|_COMPILING_FUNCTION_|====#
 define display_compiling
-	@printf " \033[1;36mCompiling .\r"
+	@printf "\033[1;36mCompiling .\r"
 	@sleep 1
-	@printf " Compiling . .\r"
+	@printf "Compiling . .\r"
+	@sleep 1
+	@printf "Compiling . . .\r\033[m"
 	@sleep 2
-	@printf " Compiling . . .\n\033[m"
-	@sleep 1
 endef
 #======|_DELETING_FUNCTION_|===#
 define display_deleting
@@ -66,7 +67,7 @@ define display_deleting
 	@printf  " deleting . . .\r\033[m"
 	@sleep 1
 endef
-#=========|_CLEAN_UP_|========#s
+#=========|_COLORS_|========#s
 
 D = \033[m
 R = \033[1;31m
@@ -81,9 +82,11 @@ O = \033[38;5;208m
 clean :
 	@$(RM) $(OBJDIR)
 	@$(call display_deleting)
+	@sleep 1
 	@printf "\033[1;36mObjects are deleted ! ✅\n\033[m"
 fclean : clean
 	@$(RM) $(NAME)
 	@$(call display_deleting)
+	@sleep 1
 	@printf "\033[38;5;208mExecutable are deleted ! ✅\n\033[m"
 re : fclean all
